--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ target-version = 'py38'
 select = ['ALL']
 
 ignore = [
+    'ANN101',  # missing-type-self
     'ANN401',  # any-type
     'D203',    # one-blank-line-before-class
     'D212',    # multi-line-summary-first-line
