--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,5 @@
 [project]
 name = "pointcloud2"
-version = "0.1.0"
 description = "PointCloud2 lib for non ROS environments"
 authors = [
     { name = "Marko Bausch", email = "60338487+mrkbac@users.noreply.github.com" }
@@ -21,6 +20,7 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
 ]
 
+dynamic = ["version"]
 
 [build-system]
 requires = ["hatchling"]
@@ -35,6 +35,9 @@ dev-dependencies = [
 
 [tool.hatch.metadata]
 allow-direct-references = true
+
+[tool.hatch.version]
+path = "src/pointcloud2/__about__.py"
 
 [tool.autopep8]
 max_line_length = 100
