--- a/.github/workflows/bump.yaml
+++ b/.github/workflows/bump.yaml
@@ -17,6 +17,9 @@ jobs:
   bump:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write
+
     steps:
       - uses: actions/checkout@v3
 
