--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ requires-python = ">= 3.8"
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3 :: Only",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
@@ -22,6 +25,9 @@ classifiers = [
 
 dynamic = ["version"]
 
+[project.urls]
+Source = "https://github.com/mrkbac/pointcloud2"
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
@@ -29,15 +35,23 @@ build-backend = "hatchling.build"
 [tool.rye]
 managed = true
 dev-dependencies = [
-    "ruff>=0.0.280",
     "autopep8>=2.0.2",
+    "pdoc>=14.0.0",
+    "ruff>=0.0.282",
 ]
+
+[tool.rye.scripts]
+test = "python -m doctest ./src/pointcloud2/__init__.py"
+format = "autopep8 --in-place --recursive ./src/"
+lint = "ruff ./src"
+check = { chain = ["format", "lint", "test"] }
+doc = { chain = ["check", "pdoc --output ./docs --no-include-undocumented ./src/pointcloud2"] }
 
 [tool.hatch.metadata]
 allow-direct-references = true
 
 [tool.hatch.version]
-path = "src/pointcloud2/__about__.py"
+path = "src/pointcloud2/__init__.py"
 
 [tool.autopep8]
 max_line_length = 100
@@ -60,3 +74,6 @@ ignore = [
 
 [tool.ruff.flake8-quotes]
 inline-quotes = 'single'
+
+[tool.ruff.pydocstyle]
+convention = "google"
