--- a/.github/workflows/bump.yaml
+++ b/.github/workflows/bump.yaml
@@ -39,7 +39,7 @@ jobs:
           VERSION=`hatch version`
           hatch version ${{ inputs.version }}
           NEW_VERSION=`hatch version`
-          git add ./src/kappe/__init__.py
+          git add ./src/pointcloud2/__init__.py
           git commit -m "Bump version: $VERSION → $NEW_VERSION"
           git tag "v$NEW_VERSION"
           git push
