--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -5,9 +5,9 @@ on:
   workflow_dispatch:
     inputs:
       job:
-        description: 'Jobs'
+        description: "Jobs"
         required: true
-        default: 'lint'
+        default: "lint"
         type: choice
         options:
           - lint
@@ -20,12 +20,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-
-      - uses: sksat/setup-rye@v0.5.0
-      - run: rye sync --no-lock
-
-      - run: rye run check
+      - uses: actions/checkout@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
+        with:
+          python-version: "3.10"
+          activate-environment: true
+          enable-cache: false
+      - name: Install Python
+        run: |
+          uv pip install pip
+      - uses: pre-commit/action@v3.0.1
+      - name: Test
+        run: uv run pytest
 
   build:
     if: github.event_name == 'release' || github.event.inputs.job == 'build'
@@ -40,12 +47,9 @@ jobs:
       contents: read
 
     steps:
-      - uses: actions/checkout@v3
-
-      - uses: sksat/setup-rye@v0.5.0
-      - run: rye sync --no-lock
-
-      - run: rye build
-
-      - name: Publish package distributions to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
+      - name: Build
+        run: uv build
+      - name: Publish
+        run: uv publish
